# GPUPeek

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
NVIDIA_GPU/: COMPARISON_CN.md
NVIDIA_GPU/common/: gpu_info.h  timer.h
NVIDIA_GPU/generic/: bandwidth_kernel.cu  warp_kernel.cu
NVIDIA_GPU/ref/: blackwell_guide.html  compute_sanitizer.html  cublas_guide.html  cuda_runtime_api.html  cutlass_tutorial_block_scaling.md  cutlass_tutorial_subbyte_gemm.md  deepseek_fp8_training.md  driver_api.html  nvcc_guide.html
NVIDIA_GPU/sm_120/: RESEARCH.md  RESEARCH_CN.md  arch.cu  benchmarks.cu
NVIDIA_GPU/sm_120/advanced/: CMakeLists.txt  README.md  RESEARCH.md  advanced_research_benchmarks.cu  advanced_research_kernel.cu  main.cu
NVIDIA_GPU/sm_120/atomic/: CMakeLists.txt  README.md  RESEARCH.md  atomic_benchmarks.cu  atomic_kernels.cu
NVIDIA_GPU/sm_120/bank_conflict/: CMakeLists.txt  README.md  RESEARCH.md  bank_conflict_benchmarks.cu  bank_conflict_kernel.cu  main.cu
NVIDIA_GPU/sm_120/bank_conflict/data/: bank_conflict_padding_data.csv  bank_conflict_stride_data.csv
NVIDIA_GPU/sm_120/barrier/: CMakeLists.txt  README.md  RESEARCH.md  barrier_benchmarks.cu  barrier_kernels.cu  main.cu
NVIDIA_GPU/sm_120/cooperative_groups/: CMakeLists.txt  README.md  RESEARCH.md  main.cu
NVIDIA_GPU/sm_120/cuda_core/: CMakeLists.txt  README.md  RESEARCH.md  cuda_core_benchmarks.cu  cuda_core_kernels.cu  main.cu
NVIDIA_GPU/sm_120/cuda_graph/: CMakeLists.txt  README.md  RESEARCH.md  cuda_graph_research_benchmarks.cu  cuda_graph_research_kernel.cu
NVIDIA_GPU/sm_120/deep/: CMakeLists.txt  README.md  RESEARCH.md  deep_research_benchmarks.cu  deep_research_kernel.cu  main.cu
NVIDIA_GPU/sm_120/dp4a/: CMakeLists.txt  README.md  RESEARCH.md
NVIDIA_GPU/sm_120/fp4_fp6/: CMakeLists.txt  README.md  RESEARCH.md  fp4_fp6_research_kernel.cu
NVIDIA_GPU/sm_120/fp8/: CMakeLists.txt  README.md  RESEARCH.md
NVIDIA_GPU/sm_120/mbarrier/: CMakeLists.txt  README.md  RESEARCH.md  main.cu  mbarrier_research_benchmarks.cu
NVIDIA_GPU/sm_120/memory/: CMakeLists.txt  README.md  RESEARCH.md  main.cu  memory_research_benchmarks.cu  memory_research_kernel.cu
NVIDIA_GPU/sm_120/multi_stream/: CMakeLists.txt  README.md  RESEARCH.md  main.cu  multi_stream_research_kernel.cu
NVIDIA_GPU/sm_120/ncu_profiling/: CMakeLists.txt  README.md  RESEARCH.md  ncu_profiling_benchmarks.cu
NVIDIA_GPU/sm_120/redux_sync/: CMakeLists.txt  README.md  RESEARCH.md  main.cu  redux_sync_research_benchmarks.cu  redux_sync_research_kernel.cu
NVIDIA_GPU/sm_120/redux_sync/data/: reduction_methods.csv  redux_benchmark.csv  warp_vote.csv
NVIDIA_GPU/sm_120/tensor_mem/: CMakeLists.txt  README.md  RESEARCH.md  main.cu  tensor_mem_research_benchmarks.cu  tensor_mem_research_kernel.cu
NVIDIA_GPU/sm_120/unified_memory/: CMakeLists.txt  README.md  RESEARCH.md  unified_memory_research_benchmarks.cu
NVIDIA_GPU/sm_120/warp_specialize/: CMakeLists.txt  README.md  RESEARCH.md  warp_specialize_benchmarks.cu  warp_specialize_kernels.cu
NVIDIA_GPU/sm_120/wgmma/: CMakeLists.txt  README.md  RESEARCH.md  wgmma_research_benchmarks.cu
NVIDIA_GPU/sm_120/wmma/: CMakeLists.txt  README.md  RESEARCH.md  main.cu  mma_research_benchmarks.cu  mma_research_kernel.cu  wmma_mma_benchmarks.cu  wmma_performance_benchmarks.cu  wmma_performance_kernel.cu  wmma_test_benchmarks.cu
docs/: README.md  RESEARCH_REPORT_EN.md  RESEARCH_REPORT_ZH.md
ref/: CUTLASS_README.md  README.md  cuda_gdb.html  cuda_programming_guide.html  cutlass_tutorial_cluster_gemm.md  cutlass_tutorial_tmem_gemm.md  flashattention4.md  inline_ptx.html  nsight_compute.html  nvrtc_guide.html  ptx_isa.html
scripts/: README.md  plot_atomic_ops.py  plot_bank_conflict.py  plot_barrier_sync.py  plot_cooperative_groups.py  plot_cuda_core_throughput.py  plot_cuda_graph.py  plot_dp4a.py  plot_fp_precision.py  plot_l2_cache_analysis.py  plot_mbarrier.py  plot_memory_bandwidth.py  plot_multi_stream.py  plot_redux_sync.py  plot_tensor_core.py  plot_tensor_mem.py  plot_unified_memory.py  plot_warp_specialize.py  requirements.txt
src/: COMPARISON.md
src/common/: gpu_info.cu  main.cu
src/generic/: compute_kernel.cu
src/metal/: Package.swift  README.md  RESEARCH.md  bandwidth_test.metal  research_loop.sh
src/metal/.build/: build.db  debug.yaml  plugin-tools.yaml
src/metal/Benchmarks/: README.md  SUMMARY.md
src/metal/Phase1_Benchmark_Optimization/: Phase1_Benchmark_Optimization_Report.md  README.md  (+3 more)
src/sm_120/: RESEARCH.md  RESEARCH_CN.md  advanced_research_kernel.cu  arch_kernels.cu  atomic_benchmarks.cu  barrier_kernels.cu  cuda_core_benchmarks.cu  deep_research_benchmarks.cu  dp4a_research_kernel.cu  fp4_fp6_research_benchmarks.cu  fp4_fp6_research_kernel.cu  fp8_research_kernel.cu  mbarrier_research_benchmarks.cu  memory_research_benchmarks.cu  memory_research_kernel.cu  mma_research_benchmarks.cu  mma_research_kernel.cu  multi_stream_research_benchmarks.cu  redux_sync_research_benchmarks.cu  tcgen05_research_benchmarks.cu  tcgen05_research_kernel.cu  warp_specialize_benchmarks.cu  wgmma_research_benchmarks.cu  wgmma_research_kernel.cu  wmma_mma_benchmarks.cu  wmma_mma_kernel.cu  wmma_test_benchmarks.cu  wmma_test_kernel.cu
src/sm_120/memory/: CMakeLists.txt  README.md  RESEARCH.md  memory_research_benchmarks.cu
(+1150 files in other folders)
